# Marmeladka

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  commands.json  docker-compose.yml  frog.py  main.py  migrate_data.py  neko.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 00e8df0f93b2_update_guild_config.py  233b4ceb2929_private_voice_channel.py  63d225466e75_initial_migration.py  82a61992e39a_fix_issues.py
cogs/events/: logging.py  ukr_train.py
cogs/fun/: cutie.py  emotions.py  neko.py  nuclear.py
cogs/notifications/: birthday.py  instagram.py
cogs/user/: private_voice.py  server_top.py  top_bumps.py  top_messages.py  top_voice.py  user_profile.py
cogs/utils/: information.py  tech.py
config/: config_manager.py  hooks.json
config/development/: .env.example
database/: database_manager.py  init.py  models.py
functions/: anime_func.py  cutie_func.py  nuclear_func.py  top_func.py  user_profile_func.py
locales/: emotion_commands.json
localization/: en-EN.json  ru-RU.json  ru-Ru.json  uk-UA.json
progress/: birthday.py  instagram.py  jojo.py
src/yaml/: gifs.yaml
ui/: nuclearUI.py  profileUI.py  ticketsUI.py  welcomeUI.py
utils/: check_all_hooks.py  create_embed.py  fetch_emoji.py  get_random_gif.py  guild.py  localization_provider.py
