[tool.poetry]
name = "marmeladka"
version = "0.1.3"
description = "Cute and helpful discord bot"
authors = ["JellyTyan <lycomilopster@gmail.com>"]
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

hikari-arc = { version = "2.1.1", extras = ["cron"] }
hikari-miru = "4.2.0"
hikari = { version = "2.5.0", extras = ["voice"] }
python-dotenv = "1.2.1"
pyyaml = "6.0.3"
aiohttp = "3.13.2"
"nekos.py" = "1.1.0"
pendulum = "3.1.0"
pillow = "12.0.0"
asyncpg = "*"
psycopg2-binary = "*"
SQLAlchemy = "2.0.40"
greenlet = "*"
alembic = "1.15.2"
croniter = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
strict = true

[tool.ruff]
select = ["E", "F", "W", "I"]
line-length = 100
